--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="vizefinalhesap" href="vizefinalhesap.html">
 </head>
 <body>
     <noscript>Sorry, your browser does not support JavaScript!</noscript>
